--- a/FirebaseAuthenticationExample/FirebaseAuthenticationExample/Base.lproj/Main.storyboard
+++ b/FirebaseAuthenticationExample/FirebaseAuthenticationExample/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FirebaseAuthenticationExample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,44 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="A4U-jk-LBO">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OxC-CV-vyM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.27450980392156865" green="0.42745098039215684" blue="0.58039215686274503" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="5yM-9H-5jS">
+                                <rect key="frame" x="84" y="55" width="206" height="206"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="206" id="Hba-Lj-yde"/>
+                                    <constraint firstAttribute="width" constant="206" id="vgn-lh-4qF"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="OxC-CV-vyM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="175-hX-gqS"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="A4U-jk-LBO" secondAttribute="bottom" id="1BJ-hs-oxz"/>
+                            <constraint firstItem="5yM-9H-5jS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5b2-Ae-dYA"/>
+                            <constraint firstItem="OxC-CV-vyM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5rD-19-VHw"/>
+                            <constraint firstAttribute="trailing" secondItem="A4U-jk-LBO" secondAttribute="trailing" id="G1n-rn-Hc9"/>
+                            <constraint firstItem="5yM-9H-5jS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="35" id="Mhy-43-Xlv"/>
+                            <constraint firstItem="A4U-jk-LBO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="UZX-CC-tGt"/>
+                            <constraint firstAttribute="trailing" secondItem="OxC-CV-vyM" secondAttribute="trailing" id="XD7-aX-e4i"/>
+                            <constraint firstItem="A4U-jk-LBO" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="v34-d1-qJX"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OxC-CV-vyM" secondAttribute="bottom" id="yRd-Uh-SqJ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Background" width="414" height="736"/>
+        <image name="Logo" width="206" height="206"/>
+    </resources>
 </document>
